// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`B.js 1`] = `
// @flow
var A = require ('./A');
import type C from './C';

export type B = string;
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
// @flow
var A = require("./A");
import type C from "./C";

export type B = string;

`;

exports[`C.js 1`] = `
// @flow
var A = require ('./A');
import type { B } from './B'

class C extends A {
  b: B;
}

module.exports = C;
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
// @flow
var A = require("./A");
import type { B } from "./B";

class C extends A {
  b: B;
}

module.exports = C;

`;
